--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <body>
     <h1>안녕</h1>
        
-    <a href="d.html">문제를 풀었다.</a>
+    <a href="test1.html">1번</a>
+    <a href="test2.html">2번</a>
+    <a href="test3.html">3번</a>
+    <a href="test4.html">4번</a>
+    <a href="test5.html">5번</a>
+    <a href="test6.html">6번</a>
+    <a href="test7.html">7번<a>
 </body>
 </html>
