이미지업로드

--- a/test2.html
+++ b/test2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><img src="../새 폴더/symbol.gif" alt="" width = "160px" height = "160px"></h1>
+    <h1><img src="symbol.gif" alt="" width = "160px" height = "160px"></h1>
 
     <h1>서울특별시</h1>
 
