파일읽는경로변경

--- a/test1.html
+++ b/test1.html
@@ -14,7 +14,7 @@
         </colgroup>
         <h1>colgroup 연습</h1>
         <tr>
-            <th><img src="../새 폴더/7456316410689587162.png" 
+            <th><img src="7456316410689587162.png" 
                 alt="" 
                 width = "300px" height = "300px"></th>
             <th>PC</th>
@@ -22,7 +22,7 @@
             <th>V4</th>
         </tr>
         <tr>
-            <td><img src="../새 폴더/lotus.jpg" 
+            <td><img src="lotus.jpg" 
                 alt="" 
                 width = "300px" height = "300px"></td>
             <td>연꽃</td>
